tests/negative/constant_divzero.c
int x[1 / 0];
int main(void) { return 0; }
